Bug 169533 - Some slide background images not shown in Presenter console (Linux)
Summary: Some slide background images not shown in Presenter console (Linux)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-11-19 07:41 UTC by Buovjaga
Modified: 2025-11-22 20:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2025-11-19 07:41:23 UTC
1. Open attachment 203779 [details] on Linux
2. Slide Show - Slide Show Settings - Presenter console: Windowed
3. Start slide show, advance to slide 2 and 3

With gtk3 and kf6, the background image is not shown. With gen, it is shown scaled differently and the text content is duplicated into the background, but this seems to be described in bug 169087 (same blamed commit).

Bibisected with linux-64-26.2 to 4bc08277e8fcfc37105f1427ca2f0d596d39eccd
fix DrawPolyPolygon alpha behaviour
Comment 1 Commit Notification 2025-11-21 14:38:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e895d29150cce2900d62d670dad8ee33452c4a01

tdf#169533 slide background images not shown in Presenter console

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Buovjaga 2025-11-22 20:50:07 UTC
Verified, thanks. Also with the gen backend and bug 169087 is likewise fixed.

Arch Linux 64-bit
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 70e001ae2da693815a390dddf9cafe8c54bbf1f4
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 22 November 2025