tdf#169533 slide background images not shown in Presenter console

regression from
  commit 4bc08277e8fcfc37105f1427ca2f0d596d39eccd
  Author: Noel Grandin <noel.grandin@collabora.co.uk>
  Date:   Fri Oct 17 15:11:59 2025 +0200
  fix DrawPolyPolygon alpha behaviour

Change-Id: Icf2f1789e6f5ef5d67668b7b71f23948018a2dff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194299
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>